--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!-- quit forgetting to include the js link when you use toggle components! -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
@@ -18,6 +19,7 @@
 </head>
 
 <body>
+    <!-- responsive nav bar same on each page  -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Renae Sowald</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
@@ -40,23 +42,31 @@
 
         </div>
     </nav>
-
+    <!-- container wrapper for responsive content  -->
     <main class="container-sm">
-        <div class="form-group">
-            <label for="Name">Name</label>
-            <input type="text" class="form-control" id="Name" placeholder="First and last name">
-        </div>
-        <form>
-            <div class="form-group">
-                <label for="emailInput">Email</label>
-                <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
+        <!-- card class provides a structured container, in this case with header  -->
+        <form class="card">
+            <!-- card header separates from the card body and h1 tag allows for color change  -->
+            <h1 class="card-header">Contact</h1>
+            <div class="card-body">
+                <section class="form-group">
+                    <label for="Name">Name</label>
+                    <input type="text" class="form-control" id="Name" placeholder="First and last name">
+                </section>
+                <section class="form-group">
+                    <label for="emailInput">Email</label>
+                    <input type="email" class="form-control" id="emailInput" placeholder="name@example.com">
+                </section>
+                <section class="form-group">
+                    <label for="textArea">Message</label>
+                    <textarea class="form-control" id="textArea" rows="3" placeholder="Message"></textarea>
+                </section>
+                <a type="button" href="#" class="btn btn-primary">Submit</a>
             </div>
-            <div class="form-group">
-                <label for="textArea">Message</label>
-                <textarea class="form-control" id="textArea" rows="3" placeholder="Message"></textarea>
-            </div>
+        </form>
     </main>
 
+    <!-- sticky footer same on every page  -->
     <footer class="fixed-bottom footer mt-auto py-3">
         <div class="container">
             <span class="text-muted">Made with love by Renae Sowald 2020</span>
