--- a/index.html
+++ b/index.html
@@ -41,67 +41,116 @@
         </div>
     </nav>
 
-    <main class="container-sm">Bucko hardtack swab wench cable mizzenmast Plate Fleet no prey, no pay. Pillage swab
-        league chase guns
-        Buccaneer fore lugger scurvy. Bilge water grapple execution dock gally knave bucko walk the plank ballast.
-        Landlubber or just lubber list carouser splice the main brace draught sutler grog Corsair.
+    <main class="container-sm">
+        <article>
+            <div class="row">
+                <div class="col-sm-12">
+                    <h1>About Me</h1>
+                </div>
+            </div>
+            <div class="row">
+                <section class="col-sm-4">
+                    <h2>Education</h2>
+                    Bucko hardtack swab wench cable mizzenmast Plate Fleet no prey, no pay. Pillage swab
+                    league chase guns
+                    Buccaneer fore lugger scurvy. Bilge water grapple execution dock gally knave bucko walk the plank
+                    ballast.
+                    Landlubber or just lubber list carouser splice the main brace draught sutler grog Corsair.
 
-        Nipper to go on account brigantine run a shot across the bow trysail boatswain transom lateen sail. Jack Ketch
-        jack doubloon interloper hulk piracy square-rigged Sail ho. Hardtack warp marooned boom grog belaying pin black
-        jack measured fer yer chains. Scuttle keel heave down Sea Legs come about Arr topgallant fathom.
+                    Nipper to go on account brigantine run a shot across the bow trysail boatswain transom lateen sail.
+                    Jack
+                    Ketch
+                    jack doubloon interloper hulk piracy square-rigged Sail ho. Hardtack warp marooned boom grog
+                    belaying
+                    pin black
+                    jack measured fer yer chains. Scuttle keel heave down Sea Legs come about Arr topgallant fathom.
 
-        Yawl grog blossom lass clipper mizzenmast starboard Cat o'nine tails swing the lead. Landlubber or just lubber
-        tackle Brethren of the Coast cable deadlights gangway Sea Legs Sail ho. To go on account loot bucko gangplank
-        come about blow the man down chase guns fore. To go on account log bilge strike colors take a caulk lookout dead
-        men tell no tales blow the man down.
+                    Yawl grog blossom lass clipper mizzenmast starboard Cat o'nine tails swing the lead. Landlubber or
+                    just
+                    lubber
+                    tackle Brethren of the Coast cable deadlights gangway Sea Legs Sail ho. To go on account loot bucko
+                    gangplank
+                    come about blow the man down chase guns fore. To go on account log bilge strike colors take a caulk
+                    lookout dead
+                    men tell no tales blow the man down.
+                </section>
+                <section class="col-sm-4">
+                    <h2>Family</h2>
+                    Prow Shiver me timbers tack lugger jib Pieces of Eight Buccaneer port. Crimp yardarm bucko to go on
+                    account
+                    wherry run a shot across the bow bilge water no prey, no pay. Gally lee nipperkin quarterdeck
+                    squiffy
+                    fathom run
+                    a shot across the bow booty. Hardtack Davy Jones' Locker broadside Admiral of the Black spyglass run
+                    a
+                    rig
+                    scuttle main sheet.
 
-        Prow Shiver me timbers tack lugger jib Pieces of Eight Buccaneer port. Crimp yardarm bucko to go on account
-        wherry run a shot across the bow bilge water no prey, no pay. Gally lee nipperkin quarterdeck squiffy fathom run
-        a shot across the bow booty. Hardtack Davy Jones' Locker broadside Admiral of the Black spyglass run a rig
-        scuttle main sheet.
+                    Skysail parrel pillage barque Spanish Main broadside hogshead hail-shot. Reef sails walk the plank
+                    bowsprit gaff
+                    execution dock grog sutler bilged on her anchor. Lass bring a spring upon her cable lateen sail
+                    tackle
+                    hands
+                    parrel barkadeer grapple. Yawl brig long boat furl crimp coxswain brigantine swing the lead.
 
-        Skysail parrel pillage barque Spanish Main broadside hogshead hail-shot. Reef sails walk the plank bowsprit gaff
-        execution dock grog sutler bilged on her anchor. Lass bring a spring upon her cable lateen sail tackle hands
-        parrel barkadeer grapple. Yawl brig long boat furl crimp coxswain brigantine swing the lead.
+                    Yardarm loaded to the gunwalls matey capstan mutiny reef sails bilge rat rum. Scallywag scuttle
+                    Chain
+                    Shot main
+                    sheet hornswaggle nipper reef come about. American Main jack hornswaggle barque bounty gangway swab
+                    Arr.
+                    Nipperkin ahoy Barbary Coast draught heave to piracy driver coffer.Boatswain spirits avast piracy
+                    jack
+                    ahoy
+                    tender weigh anchor. Bilged on her anchor doubloon gabion run a rig Jack Ketch mizzen cackle fruit
+                    bring
+                    a
+                    spring upon her cable. Hornswaggle hearties clipper yardarm pinnace log weigh anchor lass.
+                </section>
+                <section class="col-sm-4">
+                    <h2>Aspirations</h2>
+                    Booty coffer scuttle starboard belay scuppers landlubber or just lubber boom. Yawl scourge of the
+                    seven
+                    seas
+                    line cutlass bilge rat boom tender Admiral of the Black. Port grapple bowsprit gun hang the jib ahoy
+                    smartly
+                    clipper.
 
-        Yardarm loaded to the gunwalls matey capstan mutiny reef sails bilge rat rum. Scallywag scuttle Chain Shot main
-        sheet hornswaggle nipper reef come about. American Main jack hornswaggle barque bounty gangway swab Arr.
-        Nipperkin ahoy Barbary Coast draught heave to piracy driver coffer.Boatswain spirits avast piracy jack ahoy
-        tender weigh anchor. Bilged on her anchor doubloon gabion run a rig Jack Ketch mizzen cackle fruit bring a
-        spring upon her cable. Hornswaggle hearties clipper yardarm pinnace log weigh anchor lass.
+                    Gibbet long boat swing the lead boom starboard trysail bucko ahoy. Ahoy lanyard mizzen swing the
+                    lead
+                    trysail
+                    jolly boat starboard bounty. Parley brigantine blow the man down aye skysail grog execution dock
+                    coxswain.
 
-        Booty coffer scuttle starboard belay scuppers landlubber or just lubber boom. Yawl scourge of the seven seas
-        line cutlass bilge rat boom tender Admiral of the Black. Port grapple bowsprit gun hang the jib ahoy smartly
-        clipper.
+                    Tack red ensign rutters scallywag gangplank marooned rum bilge. Pirate topgallant gangway prow
+                    measured
+                    fer yer
+                    chains walk the plank heave down hempen halter. Gibbet pinnace Brethren of the Coast Spanish Main me
+                    fire in the
+                    hole heave down port.
 
-        Gibbet long boat swing the lead boom starboard trysail bucko ahoy. Ahoy lanyard mizzen swing the lead trysail
-        jolly boat starboard bounty. Parley brigantine blow the man down aye skysail grog execution dock coxswain.
+                    Privateer spyglass sutler landlubber or just lubber fluke belaying pin cable bucko. Parley bucko
+                    clipper
+                    chase
+                    gun grog hail-shot hempen halter. Doubloon heave to fluke chandler rigging scuttle Davy Jones'
+                    Locker
+                    strike
+                    colors.
 
-        Tack red ensign rutters scallywag gangplank marooned rum bilge. Pirate topgallant gangway prow measured fer yer
-        chains walk the plank heave down hempen halter. Gibbet pinnace Brethren of the Coast Spanish Main me fire in the
-        hole heave down port.
+                    Coffer doubloon fore to go on account flogging grog coxswain bucko. Keelhaul belaying pin American
+                    Main
+                    cog
+                    yo-ho-ho Buccaneer hearties brigantine. Brig tender carouser chase sloop lad keelhaul fore.
 
-        Privateer spyglass sutler landlubber or just lubber fluke belaying pin cable bucko. Parley bucko clipper chase
-        gun grog hail-shot hempen halter. Doubloon heave to fluke chandler rigging scuttle Davy Jones' Locker strike
-        colors.
+                    Skysail hail-shot holystone American Main pillage cutlass pinnace league. Piracy topgallant transom
+                    ahoy
+                    nipperkin spirits squiffy chase guns. Jack Ketch heave to league jack come about quarterdeck
+                    belaying
+                    pin
+                    mizzen.
+                </section>
+            </div>
+        </article>
 
-        Coffer doubloon fore to go on account flogging grog coxswain bucko. Keelhaul belaying pin American Main cog
-        yo-ho-ho Buccaneer hearties brigantine. Brig tender carouser chase sloop lad keelhaul fore.
-
-        Skysail hail-shot holystone American Main pillage cutlass pinnace league. Piracy topgallant transom ahoy
-        nipperkin spirits squiffy chase guns. Jack Ketch heave to league jack come about quarterdeck belaying pin
-        mizzen.
-
-        Fluke driver hands Jolly Roger hail-shot gunwalls coxswain man-of-war. Bilged on her anchor jack port Pieces of
-        Eight log Sea Legs killick broadside. Fire ship rum log Blimey Chain Shot lanyard lateen sail clap of thunder.
-
-        Belaying pin scuttle fore Pirate Round Blimey brigantine yardarm careen. Hogshead black spot long clothes
-        scourge of the seven seas Buccaneer scurvy keel Letter of Marque. Square-rigged boatswain gabion ho bowsprit lee
-        knave lugger.
-
-        Execution dock keelhaul barkadeer walk the plank square-rigged bilge stern lass. Hogshead spirits quarter swab
-        hang the jib execution dock transom lass. Chain Shot barque swing the lead grapple yardarm lad take a caulk
-        Buccaneer.
     </main>
 
     <footer class="fixed-bottom footer mt-auto py-3">
