--- a/index.html
+++ b/index.html
@@ -46,82 +46,45 @@
                 <div class="row">
                     <section class="col-sm-6">
                         <h2>Background</h2>
-                        Bucko hardtack swab wench cable mizzenmast Plate Fleet no prey, no pay. Pillage swab
-                        league chase guns
-                        Buccaneer fore lugger scurvy. Bilge water grapple execution dock gally knave bucko walk the
-                        plank
-                        ballast.
-                        Landlubber or just lubber list carouser splice the main brace draught sutler grog Corsair.
-
-                        Nipper to go on account brigantine run a shot across the bow trysail boatswain transom
-                        lateen
-                        sail.
-                        Jack
-                        Ketch
-                        jack doubloon interloper hulk piracy square-rigged Sail ho. Hardtack warp marooned boom grog
-                        belaying
-                        pin black
-                        jack measured fer yer chains. Scuttle keel heave down Sea Legs come about Arr topgallant
-                        fathom.
-
-                        Yawl grog blossom lass clipper mizzenmast starboard Cat o'nine tails swing the lead.
-                        Landlubber
-                        or
-                        just
-                        lubber
-                        tackle Brethren of the Coast cable deadlights gangway Sea Legs Sail ho. To go on account
-                        loot
-                        bucko
-                        gangplank
-                        come about blow the man down chase guns fore. To go on account log bilge strike colors take
-                        a
-                        caulk
-                        lookout dead
-                        men tell no tales blow the man down.
+                        <img class="float-right portrait" src="assets/PORTRAIT.jpg" alt="Self Portrait">
+                        <p>I was born in Ohio, had several years of moving around the United States with military
+                            parents,
+                            and moved back to Ohio again in time to graduate high school. I met my future husband when
+                            we
+                            were set up on a blind date for Homecoming in my junior year of high school. We went to
+                            college together at
+                            The Ohio State University and got married a week after graduation.</p>
+                        <img class="float-left rounded my-2 img-fluid" src="assets/Oval_Ohio_State.jpg"
+                            alt="Ohio State Oval">
+                        <p>At OSU, I earned 2 BA degrees in History and English, but had no interest in teaching or
+                            graduate school. My real passion was writing, and I had a vague dream of being in
+                            publishing. Before I could start a career, my new husband's job took us to
+                            Washington DC, Germany, then Seattle in a span of 3 years. Just long enough to set my career
+                            goals adrift. I began working in retail until I had my first child. Now, with two children
+                            ages 6 and 4, it is time for a new chapter.</p>
                     </section>
                     <section class="col-sm-6">
                         <h2>Current Projects</h2>
-                        Prow Shiver me timbers tack lugger jib Pieces of Eight Buccaneer port. Crimp yardarm bucko
-                        to go
-                        on
-                        account
-                        wherry run a shot across the bow bilge water no prey, no pay. Gally lee nipperkin
-                        quarterdeck
-                        squiffy
-                        fathom run
-                        a shot across the bow booty. Hardtack Davy Jones' Locker broadside Admiral of the Black
-                        spyglass
-                        run
-                        a
-                        rig
-                        scuttle main sheet.
-
-                        Skysail parrel pillage barque Spanish Main broadside hogshead hail-shot. Reef sails walk the
-                        plank
-                        bowsprit gaff
-                        execution dock grog sutler bilged on her anchor. Lass bring a spring upon her cable lateen
-                        sail
-                        tackle
-                        hands
-                        parrel barkadeer grapple. Yawl brig long boat furl crimp coxswain brigantine swing the lead.
-
-                        Yardarm loaded to the gunwalls matey capstan mutiny reef sails bilge rat rum. Scallywag
-                        scuttle
-                        Chain
-                        Shot main
-                        sheet hornswaggle nipper reef come about. American Main jack hornswaggle barque bounty
-                        gangway
-                        swab
-                        Arr.
-                        Nipperkin ahoy Barbary Coast draught heave to piracy driver coffer.Boatswain spirits avast
-                        piracy
-                        jack
-                        ahoy
-                        tender weigh anchor. Bilged on her anchor doubloon gabion run a rig Jack Ketch mizzen cackle
-                        fruit
-                        bring
-                        a
-                        spring upon her cable. Hornswaggle hearties clipper yardarm pinnace log weigh anchor lass.
+                        <img class="float-right portrait" src="assets/Kids portrait.jpg" alt="Kids Portrait">
+                        <p>My full time job is stay-at-home parent. It is the most exhausting job I've ever had, but
+                            very rewarding in its own ways. With my youngest set to start Kindergarten in the fall of
+                            2021, it is time to focus on other projects as well.</p>
+                        <p> I am enrolled in a Trilogy cirriculum coding boot camp through the University of Washington.
+                            Less than a month in, I am already well on my way to becoming a front end developer. The
+                            goal is to be a full stack developer by the end of the course in June. I will be completing
+                            several projects throughout, which I will post here. To date, I have covered these major
+                            topics:</p>
+                        <ul>
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Bootstrap</li>
+                            <li>Javascript</li>
+                        </ul>
+                        <p>This page is a project to showcase a responsive portfolio using Bootstrap (v4.5). Notice the
+                            responsive images and text as you resize your browser window or view the page on different
+                            devices. It is all possible with the power of CSS, but made much more developer friendly
+                            thanks to Bootstrap. Please visit the portfolio page for screenshots of my projects and
+                            links to the deployed application, if available.</p>
                     </section>
                 </div>
             </article>
