--- a/portfolio.html
+++ b/portfolio.html
@@ -37,31 +37,29 @@
 
     <main class="container-sm">
         <div class="row">
-            <div class="col-sm-12">
-                <h1>Portfolio</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="https://via.placeholder.com/350">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="https://via.placeholder.com/350">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="https://via.placeholder.com/350">
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="https://via.placeholder.com/350">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="https://via.placeholder.com/350">
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-4">
-                <img class="img-fluid" src="https://via.placeholder.com/350">
-            </div>
+            <article class="col-sm-8 background">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <h1>Portfolio</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12 col-md-6">
+                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                    </div>
+                    <div class="col-sm-12 col-md-6">
+                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                    </div>
+                </div>
+            </article>
         </div>
 
     </main>
