--- a/contact.html
+++ b/contact.html
@@ -25,11 +25,25 @@
                 <li class="nav-item">
                     <a class="nav-link" href="index.html">About</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="portfolio.html">Portfolio</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Social Media
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
+                            rel="noopener">GitHub</a>
+                        <a class="dropdown-item" href="www.linkedin.com/in/renae-sowald" target="_blank"
+                            rel="noopener">LinkedIn</a>
+                        <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
+                            rel="noopener">Instagram</a>
+                    </div>
                 </li>
             </ul>
 
