added noreferrer rel

--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="https://github.com/rsowald" target="_blank"
-                            rel="noopener">GitHub</a>
+                            rel="noopener noreferrer">GitHub</a>
                         <a class="dropdown-item" href="www.linkedin.com/in/renae-sowald" target="_blank"
-                            rel="noopener">LinkedIn</a>
+                            rel="noopener noreferrer">LinkedIn</a>
                         <a class="dropdown-item" href="https://www.instagram.com/renaesowald/" target="_blank"
-                            rel="noopener">Instagram</a>
+                            rel="noopener noreferrer">Instagram</a>
                     </div>
                 </li>
             </ul>
