--- a/portfolio.html
+++ b/portfolio.html
@@ -59,18 +59,31 @@
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                        <figure class="figure">
+                            <img class="figure-img img-fluid border border-dark" src="assets/Prework_About_Me.JPG">
+                            <figcaption class="figure-caption">Static HTML with minimal CSS</figcaption>
+                        </figure>
                     </div>
                     <div class="col-sm-12 col-md-6">
-                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                        <figure class="figure">
+                            <img class="img-fluid border border-dark" src="assets/Horiseon_Refactor.JPG">
+                            <figcaption class="figure-caption">Refactored for maximum accessibilty and sustainability
+                            </figcaption>
+                        </figure>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
-                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                        <figure class="figure">
+                            <img class="img-fluid border border-dark" src="assets/Favorite_Animal.JPG">
+                            <figcaption class="figure-caption">Static HTML with CSS floats</figcaption>
+                        </figure>
                     </div>
                     <div class="col-sm-12 col-md-6">
-                        <img class="img-fluid" src="https://via.placeholder.com/350">
+                        <figure class="figure">
+                            <img class="img-fluid border border-dark" src="assets/Band_Tribute.JPG">
+                            <figcaption class="figure-caption">Static HTML with no CSS</figcaption>
+                        </figure>
                     </div>
                 </div>
             </article>
