add anchor links to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,13 +60,17 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <img class="figure-img img-fluid border border-dark" src="assets/Prework_About_Me.JPG">
+                            <a href="https://rsowald.github.io/prework-about-me/" target="_blank" rel="noopener"
+                                rel="noreferrer"><img class="figure-img img-fluid border border-dark"
+                                    src="assets/Prework_About_Me.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with minimal CSS</figcaption>
                         </figure>
                     </div>
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <img class="img-fluid border border-dark" src="assets/Horiseon_Refactor.JPG">
+                            <a href="https://rsowald.github.io/AccessibilityRefactor/" target="_blank" rel="noopener"
+                                rel="noreferrer"><img class="img-fluid border border-dark"
+                                    src="assets/Horiseon_Refactor.JPG"></a>
                             <figcaption class="figure-caption">Refactored for maximum accessibilty and sustainability
                             </figcaption>
                         </figure>
@@ -75,13 +79,17 @@
                 <div class="row">
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <img class="img-fluid border border-dark" src="assets/Favorite_Animal.JPG">
+                            <a href="https://rsowald.github.io/FavoriteAnimal/" target="_blank" rel="noopener"
+                                rel="noreferrer"><img class="img-fluid border border-dark"
+                                    src="assets/Favorite_Animal.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with CSS floats</figcaption>
                         </figure>
                     </div>
                     <div class="col-sm-12 col-md-6">
                         <figure class="figure">
-                            <img class="img-fluid border border-dark" src="assets/Band_Tribute.JPG">
+                            <a href="https://rsowald.github.io/BandTribute/" target="_blank" rel="noopener"
+                                rel="noreferrer"><img class="img-fluid border border-dark"
+                                    src="assets/Band_Tribute.JPG"></a>
                             <figcaption class="figure-caption">Static HTML with no CSS</figcaption>
                         </figure>
                     </div>
