--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-
+        <!-- responsive toggler menu  -->
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
                 <li class="nav-item">
@@ -31,6 +31,7 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="contact.html">Contact<span class="sr-only">(current)</span></a>
                 </li>
+                <!-- dropdown menu for social media links  -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                         data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -51,7 +52,7 @@
     </nav>
     <!-- container wrapper for responsive content -->
     <main class="container-sm">
-        <!-- div to keep container 8 col  -->
+        <!-- div to keep container 8 col wide -->
         <div class="row">
             <article class="col-sm-8 background">
                 <!-- card class provides a structured container, in this case with header -->
